--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -98,6 +98,11 @@
     <Compile Include="Controller\CompositeCommand.cs" />
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controller\UndoRedoAvailabilityChangedArgs.cs" />
+    <Compile Include="Controls\AttributesPanel\AttributesPanel.xaml.cs">
+      <DependentUpon>AttributesPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\AttributesPanel\AttributesPanelViewModel.cs" />
+    <Compile Include="Controls\AttributesPanel\Validators\IntValidation.cs" />
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
     </Compile>
@@ -150,6 +155,10 @@
     <Compile Include="Controls\Scene\EdgeBlueprint.cs" />
     <Compile Include="Controls\Scene\EditorObjectManager.cs" />
     <Compile Include="Controls\Toolbar\ToolbarViewModel.cs" />
+    <Page Include="Controls\AttributesPanel\AttributesPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Console\AppConsole.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
