Some more methods like Generalizations anf InstanceOf for Core Metamodel

--- a/tests/Repo.Core.Tests/Repo.Core.Tests.fsproj
+++ b/tests/Repo.Core.Tests/Repo.Core.Tests.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="CoreMetamodel.Tests\Semantics.Tests\CoreMetamodelConstraintsTests.fs" />
     <Compile Include="CoreMetamodel.Tests\CoreMetamodelRepoFactoryTests.fs" />
     <Compile Include="CoreMetamodel.Tests\Elements.Tests\CorePoolTests.fs" />
+    <Compile Include="CoreMetamodel.Tests\Elements.Tests\CoreElementTests.fs" />
     <Compile Include="AttributeMetamodel.Tests\Elements.Tests\AttributeElementTests.fs" />
   </ItemGroup>
   <ItemGroup>
