Preliminary implementation of attributes in a new architecture

--- a/tests/Repo.Core.Tests/Repo.Core.Tests.fsproj
+++ b/tests/Repo.Core.Tests/Repo.Core.Tests.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="CoreMetamodel.Tests\Elements.Tests\CorePoolTests.fs" />
     <Compile Include="CoreMetamodel.Tests\Elements.Tests\CoreElementTests.fs" />
     <Compile Include="AttributeMetamodel.Tests\Elements.Tests\AttributeElementTests.fs" />
+    <Compile Include="AttributeMetamodel.Tests\Semantics.Tests\ModelCreationTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Repo\Repo.Core.fsproj" />
