--- a/src/LOGO/LogoScene/App.config
+++ b/src/LOGO/LogoScene/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" /> 
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Logs\LogoVisualization.log"/>
+      <param name="AppendToFile" value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="5MB"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
+      </layout>
+
+    </appender>
+    <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
+      <file value="Logs\LogoVisualizationError.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR"/>
+        <levelMax value="FATAL"/>
+      </filter>
+    </appender>
+    <logger name="LOGGER">
+      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="ErrorFile"/>
+    </logger>
+  </log4net>
 </configuration>
