--- a/src/LOGO/LogoScene/App.config
+++ b/src/LOGO/LogoScene/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" /> 
@@ -8,32 +8,38 @@
   </startup>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\LogoVisualization.log"/>
-      <param name="AppendToFile" value="true"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="5MB"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <param name="File" value="Logs\LogoVisualization.log" />
+      <param name="AppendToFile" value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
+        <param name="ConversionPattern" value="%d  %-5p %m%n" />
       </layout>
 
     </appender>
     <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\LogoVisualizationError.log"/>
-      <appendToFile value="true"/>
-      <maximumFileSize value="5MB"/>
-      <maxSizeRollBackups value="10"/>
+      <file value="Logs\LogoVisualizationError.log" />
+      <appendToFile value="true" />
+      <maximumFileSize value="5MB" />
+      <maxSizeRollBackups value="10" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
+        <conversionPattern value="%d %level %thread %logger - %message%newline" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR"/>
-        <levelMax value="FATAL"/>
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
       </filter>
     </appender>
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender"/>
-      <appender-ref ref="ErrorFile"/>
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ErrorFile" />
     </logger>
   </log4net>
-</configuration>
+<runtime><assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  <dependentAssembly>
+    <Paket>True</Paket>
+    <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.7.0.0" />
+  </dependentAssembly>
+</assemblyBinding></runtime></configuration>
