--- a/src/LOGO/LogoScene/LogoScene.csproj
+++ b/src/LOGO/LogoScene/LogoScene.csproj
@@ -62,11 +62,19 @@
     <Compile Include="Controls\Converters\TurtleYConverter.cs" />
     <Compile Include="Controls\Converters\XLineConverter.cs" />
     <Compile Include="Controls\Converters\YLineConverter.cs" />
+    <Compile Include="TurtleInterfaces\DoublePoint.cs" />
+    <Compile Include="EventArgs\LineEventArgs.cs" />
+    <Compile Include="EventArgs\PenActionEventArgs.cs" />
+    <Compile Include="EventArgs\RotationEventArgs.cs" />
+    <Compile Include="EventArgs\SpeedUpdateEventArgs.cs" />
+    <Compile Include="TurtleInterfaces\ITurtle.cs" />
+    <Compile Include="TurtleInterfaces\ITurtleCommander.cs" />
     <Compile Include="Models\DataLayer\Turtle.cs" />
     <Compile Include="Models\DataLayer\TurtleCommanderAsync.cs" />
     <Compile Include="Models\DataLayer\DrawingScene.cs" />
     <Compile Include="Models\DataLayer\TurtleCommander.cs" />
     <Compile Include="Models\Log\Logger.cs" />
+    <Compile Include="TurtleInterfaces\OrientedLine.cs" />
     <Compile Include="ViewModels\IAnimationCompletedHandler.cs" />
     <Compile Include="Models\Constants\Constants.cs" />
     <Compile Include="Operations\PointOperations.cs" />
@@ -146,10 +154,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\TurtleManipulation\TurtleManipulation.csproj">
-      <Project>{5281400d-38c4-4ce6-a390-6ad7e4f9d440}</Project>
-      <Name>TurtleManipulation</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
