--- a/src/LOGO/LogoScene/LogoScene.csproj
+++ b/src/LOGO/LogoScene/LogoScene.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Controls\Converters\TurtleYConverter.cs" />
     <Compile Include="Controls\Converters\XLineConverter.cs" />
     <Compile Include="Controls\Converters\YLineConverter.cs" />
+    <Compile Include="ProgramRunner\ProgramRunner.cs" />
     <Compile Include="TurtleInterfaces\DoublePoint.cs" />
     <Compile Include="EventArgs\LineEventArgs.cs" />
     <Compile Include="EventArgs\PenActionEventArgs.cs" />
@@ -105,10 +106,6 @@
     <Compile Include="Controls\TurtleControl.xaml.cs">
       <DependentUpon>TurtleControl.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -123,9 +120,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -157,6 +151,10 @@
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Interpreters\Interpreters.fsproj">
+      <Project>{6d47aecb-8f36-427c-b24b-5c4c8d8a16d0}</Project>
+      <Name>Interpreters</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\PluginManager\PluginManager.csproj">
       <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
@@ -236,6 +234,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Pictures\LogoPictures\right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Pictures\Toolbar\play.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
